--- a/front-end/index.html
+++ b/front-end/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="RedStore_Img/images/logo.png" width="125px">
+                    <img src="RedStore_Img/images/logo-white.jfif" width="125px">
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -46,7 +46,7 @@
                     <h1><b>Give Yourself a <br> New Style!</b>
 
                     </h1>
-                    <p>sucess is not about </p>
+                    <p>We’re in Business to Improve Lives</p>
                     <a href="" class="btn">Explore Now &#8594;
                     </a>
 
@@ -82,9 +82,7 @@
     <!-- ---featured products --- -->
 
     <div class="small-container">
-        <h2 class="title">Featured Products
-
-        </h2>
+        <h2 class="title">Best Sellers  </h2>
         <div class="row">
             <div class="col-4">
                 <img src="RedStore_Img/images/product-1.jpg">
@@ -93,7 +91,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
 
             <div class="col-4">
@@ -103,7 +101,7 @@
 
                 </div>
 
-                <p>$70.00</p>
+                <p>Rs.70.00</p>
             </div>
             <div class="col-4">
                 <img src="RedStore_Img/images/product-3.jpg">
@@ -112,7 +110,7 @@
 
                 </div>
 
-                <p>$40.00</p>
+                <p>Rs.40.00</p>
             </div>
             <div class="col-4">
                 <img src="RedStore_Img/images/product-4.jpg">
@@ -121,7 +119,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
 
         </div>
@@ -138,7 +136,7 @@
 
                 </div>
 
-                <p>$70.00</p>
+                <p>Rs.70.00</p>
             </div>
 
             <div class="col-4">
@@ -148,7 +146,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
             <div class="col-4">
                 <img src="RedStore_Img/images/product-7.jpg">
@@ -157,7 +155,7 @@
 
                 </div>
 
-                <p>$30.00</p>
+                <p>Rs.30.00</p>
             </div>
             <div class="col-4">
                 <img src="RedStore_Img/images/product-8.jpg">
@@ -166,7 +164,7 @@
 
                 </div>
 
-                <p>$150.00</p>
+                <p>Rs.150.00</p>
             </div>
 
         </div>
@@ -179,7 +177,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
 
             <div class="col-4">
@@ -189,7 +187,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
             <div class="col-4">
                 <img src="RedStore_Img/images/product-11.jpg">
@@ -198,7 +196,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
             <div class="col-4">
                 <img src="RedStore_Img/images/product-12.jpg">
@@ -207,7 +205,7 @@
 
                 </div>
 
-                <p>$50.00</p>
+                <p>Rs.50.00</p>
             </div>
 
         </div>
@@ -222,7 +220,7 @@
                     <img src="RedStore_Img/images/exclusive.png" class="offer-img" alt="">
                 </div>
                 <div class="col-2">
-                    <p>Exclusively Available On RedStore</p>
+                    <p>Exclusively Available on VIT Store</p>
                     <h1>
                         Smart Band 4
                     </h1>
@@ -244,12 +242,12 @@
             <div class="row">
                 <div class="col-3">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quisquam.</p>
+                    <p>I love the UI of this website as it was so joyfull and easy to understand the funtinalities of it in such a short time.</p>
                     <div class="rating">
 
                         <img src="RedStore_Img/images/user-1.png" alt="">
                         <h3>
-                            Sean Parkar
+                            Paritosh Singh
                         </h3>
 
 
@@ -258,12 +256,12 @@
 
                 <div class="col-3">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quisquam.</p>
+                    <p>Products listed on this website are amazing and they are available on very affordable prices.</p>
                     <div class="rating">
 
                         <img src="RedStore_Img/images/user-2.png" alt="">
                         <h3>
-                            Mike Smith
+                            Joseph Serrao
                         </h3>
 
 
@@ -271,12 +269,12 @@
                 </div>
                 <div class="col-3">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quisquam.</p>
+                    <p>The services and the quaility of the products is way more than I expected.It's awesome!.</p>
                     <div class="rating">
 
                         <img src="RedStore_Img/images/user-3.png" alt="">
                         <h3>
-                            Mabel Joe
+                            Saunak
                         </h3>
 
 
@@ -330,7 +328,7 @@
 
                 </div>
                 <div class="footer-col-2">
-                    <img src="RedStore_Img/images/logo-white.png">
+                    <img src="RedStore_Img/images/logo-white.jfif">
                     <p>Our Purpose is simple and sustainable pleasure benefits to people</p>
 
                 </div>
